# surfelwarp

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
apps/compaction_test/: CMakeLists.txt  custom_hash_compaction.cu  custom_hash_compaction.h  main.cpp  sort_compaction.cu  sort_compaction.h
apps/geometry_test/: CMakeLists.txt  main.cpp
apps/imgproc_test/: CMakeLists.txt  main.cpp
apps/render_test/: CMakeLists.txt  main.cpp
apps/surfelwarp_app/: CMakeLists.txt  main.cpp
common/: ArraySlice.h  ArrayView.h  BinaryFileStream.cpp  BinaryFileStream.h  CMakeLists.txt  CameraObservation.h  ConfigParser.cpp  ConfigParser.h  Constants.cpp  Constants.h  DeviceBufferArray.h  OpenCV_CrossPlatform.h  Serializer.h  Stream.h  Stream.hpp  SynchronizeArray.h  ThreadPool.h  algorithm_types.cu  algorithm_types.cuh  algorithm_types.h  color_transfer.h  common_point_cloud_utils.h  common_texture_utils.cu  common_texture_utils.h  common_types.h  common_utils.cu  common_utils.h  custom_type_traits.h  data_transfer.cu  data_transfer.cuh  data_transfer.h  device_intrinsics.h  encode_utils.h  global_configs.h  logging.h  macro_utils.h  point_cloud_typedefs.h  safe_call_utils.hpp  sanity_check.cpp  sanity_check.cu  (+3 more)
common/containers/: convenience.cuh  device_array.hpp  device_array_impl.hpp  device_memory.cpp  device_memory.hpp  device_memory_impl.hpp  kernel_containers.hpp  safe_call.hpp
core/: CMakeLists.txt  Camera.cpp  Camera.h  SurfelGeometry.cpp  SurfelGeometry.cu  SurfelGeometry.h  SurfelWarpSerial.cpp  SurfelWarpSerial.cu  SurfelWarpSerial.h  SurfelWarpSerialDebug.cpp  WarpField.cpp  WarpField.cu  WarpField.h  surfel_format.h
core/doc/: Parallel.md  SolverImplementation.md  SurfelModel.md
core/geometry/: AppendSurfelProcessor.cpp  AppendSurfelProcessor.cu  AppendSurfelProcessor.h  DoubleBufferCompactor.cpp  DoubleBufferCompactor.cu  DoubleBufferCompactor.h  FusionRemainingSurfelMarker.cpp  FusionRemainingSurfelMarker.cu  FusionRemainingSurfelMarker.h  GeometryFusion.md  GeometryInitializer.cu  GeometryInitializer.h  GeometryReinitProcessor.cpp  GeometryReinitProcessor.h  GeometryReinitialization.md  KNNBruteForceLiveNodes.cu  KNNBruteForceLiveNodes.h  KNNBruteForceRefNodes.cu  KNNBruteForceRefNodes.h  KNNSearch.cpp  KNNSearch.h  LiveGeometryUpdater.cpp  LiveGeometryUpdater.h  NodeGraphBuilder.h  NodeGraphBuilderNaive.cu  NodeGraphBuilderNaive.h  ReferenceNodeSkinner.cpp  ReferenceNodeSkinner.cu  ReferenceNodeSkinner.h  ReinitRemainingSurfelMarker.cpp  ReinitRemainingSurfelMarker.cu  ReinitRemainingSurfelMarker.h  SurfelFusionHandler.cpp  SurfelFusionHandler.cu  SurfelFusionHandler.h  SurfelNodeDeformer.cu  SurfelNodeDeformer.h  VoxelSubsampler.h  VoxelSubsamplerSorting.cu  VoxelSubsamplerSorting.h  (+11 more)
core/render/: GLClearValues.h  GLRenderedMaps.cpp  GLRenderedMaps.h  GLShaderProgram.cpp  GLShaderProgram.h  GLSurfelGeometryVAO.cpp  GLSurfelGeometryVAO.h  GLSurfelGeometryVBO.cpp  GLSurfelGeometryVBO.h  Renderer.cpp  Renderer.h  RendererDebug.cpp  RendererDraw.cpp  RendererVertexBufferArrays.cpp  glad.c
core/render/glad/: glad.h
core/render/shaders/: albedo_color.frag  fusion_map.frag  (+7 more)
core/warp_solver/: ApplyJacobianDot.cu  ApplyJacobianTransposeDot.cu  ApplyJtJMatrixFreeAtomic.cu  ApplyJtJMatrixFreeHandler.cpp  ApplyJtJMatrixFreeHandler.h  ApplyJtJMatrixFreeIndexed.cu  ApplyJtJSanityCheck.cpp  ApplyJtJSanityCheckDirect.cpp  ApplyJtJSanityCheckEigen.cpp  DenseDepthAlignmentError.cu  DenseDepthHandler.cpp  DenseDepthHandler.h  DenseDepthHandlerFreeIndex.cu  DenseDepthJacobianResidual.cu  DensityForegroundJacobianResidual.cu  DensityForegroundMapHandler.cpp  DensityForegroundMapHandler.cu  DensityForegroundMapHandler.h  GradientCheck.cpp  GradientCheck.h  ImageTermKNNFetcher.cpp  ImageTermKNNFetcher.cu  ImageTermKNNFetcher.h  JtDotResidual.cpp  JtDotResidualAtomic.cu  JtDotResidualIndexed.cu  JtJMaterializer.cpp  JtJMaterializer.cu  JtJMaterializer.h  JtJMaterializerBinBlockCSR.cu  JtJMaterializerNoSync.cu  JtJMaterializerSanityCheck.cu  JtJMaterializerScanityCheck.cpp  MaterializedSolver.md  MatrixFreeSolver.md  Node2TermsIndex.cpp  Node2TermsIndex.cu  Node2TermsIndex.h  NodeGraphSmoothHandler.cu  NodeGraphSmoothHandler.h  (+40 more)
imgproc/: CMakeLists.txt  FileFetch.cpp  FileFetch.h  ImageProcessor.cpp  ImageProcessor.h  ImageProcessorStreamed.cpp  depth_clip_filter.cu  depth_clip_filter.h  depth_surfel_collect.cu  depth_surfel_collect.h  foreground_mask_filter.cu  foreground_mask_filter.h  generate_maps.h  image_gradient.cu  image_gradient.h  normal_map.cu  rgb_clip_normalize.cu  rgb_clip_normalize.h  vertex_map.cu
imgproc/correspondence/: CMakeLists.txt  EmptyImagePairCorrespondence.cpp  EmptyImagePairCorrespondence.h  ImagePairCorrespondence.h  PatchColliderForest.h  PatchColliderForest.hpp  PatchColliderRGBCorrespondence.cu  PatchColliderRGBCorrespondence.h  gpc_common.h  gpc_feature.cuh  gpc_feature.h
imgproc/doc/: Clip.md  Overview.md  Register.md
imgproc/frameio/: FetchInterface.h  GenericFileFetch.cpp  GenericFileFetch.h  VolumeDeformFileFetch.cpp  VolumeDeformFileFetch.h
imgproc/segmentation/: CMakeLists.txt  ForegroundSegmenter.cu  ForegroundSegmenter.h  ForegroundSegmenterNaiveCRF.cpp  ForegroundSegmenterNaiveCRF.h  ForegroundSegmenterOffline.cpp  ForegroundSegmenterOffline.h  ForegroundSegmenterPermutohedral.cu  ForegroundSegmenterPermutohedral.h  crf_common.cu  crf_common.h  crf_config.h  foreground_crf_window.cu  foreground_crf_window.h  foreground_permutohedral_deduplicate.cu  foreground_permutohedral_deduplicate.h  image_permutohedral_index.cu  image_permutohedral_index.h  permutohedral_common.h  permutohedral_common.hpp
pcg_solver/: ApplySpMVBase.h  ApplySpMVBase.hpp  ApplySpMVBinBlockCSR.cuh  ApplySpMVBinBlockCSR.h  BinBlockCSR.cpp  BinBlockCSR.cuh  BinBlockCSR.h  BlockDiagonalPreconditionerInverse.cuh  BlockDiagonalPreconditionerInverse.h  BlockDiagonalPreconditionerInverse.hpp  BlockPCG.cu  BlockPCG.cuh  BlockPCG.h  BlockPCG6x6.cpp  BlockPCG6x6.h  CMakeLists.txt  block6x6_pcg_weber.cpp  block6x6_pcg_weber.cu  block6x6_pcg_weber.h  note.md  solver_configs.h
(+86 files in other folders)
